<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Settings Example</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string-array name="ages">
        <item>Select Your Age</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

</resources>
